# DiNT

./: CMakeLists.txt  README.md  clean.sh  compile.sh
alpha/alph_scripts/: am.do  cuts.gnu  cuts.gnu.save  cuts.sub  cutsga.gnu  cutsls.gnu  energy80.pl  gasave.do  gasave.pl  gather.pl  pbs80.pl  plot.pl  sample.sub  tail.pl  taills.pl  test.eps
alpha/example/bS/3_Traj/: c1.xyz  do.pl
alpha/example/bS/3_Traj/c1.N2.300/: dint.brot  dint.lj  dint.mom  dint.summary  dintmom.pl  fort.80  qqdint
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a1/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a10/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a11/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a12/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a13/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a14/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a15/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a16/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a17/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a18/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a19/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a2/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a20/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a21/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a22/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a23/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a24/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a25/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a26/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a27/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a28/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a29/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a3/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a30/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a31/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a32/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a33/: input
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a34/: input
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a35/: input
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a36/: input
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a4/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a5/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a6/: fort.31  input  output  tinker.key
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a7/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a8/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/a9/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99863/r0/: dint-rohM.x.opt
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a1/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a10/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a11/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a12/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a13/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a14/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a15/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a16/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a17/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a18/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a19/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a2/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a20/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a21/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a22/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a23/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a24/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a25/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99866/a26/: fort.31  input  output
alpha/example/bS/3_Traj/c1.N2.300/DINT99872/: sub-2.x
alpha/example/bS/3_Traj/c1.N2.300/DINT99890/: sub-1.x
alpha/example/bS/3_Traj/c1.N2.300/DINT99908/: ingen.pl
alpha/example/bS/3_Traj/c1.N2.300/lj/: auto1dmin-tinkerM.x  auto1dmin.x  input
alpha/example/bS/3_Traj/c1.N2.300/mom/: mom2.x  moments2.f  param.inc  zonz.f
alpha/example/bS/3_Traj/c1.N2.300/opt/: dint.geo  input  output
alpha/example/bS/3_Traj/c1.N2.300/samp/: brot.f90  qqdint
alpha/example/bS/3_Traj/script/: clean.x  dintmom.script  reset.x
alpha/example/bS/3_Traj/script/lj/: auto1dmin-rohM.x  auto1dmin-rohT.x  auto1dmin-tbplusexp6-2.x
alpha/example/bS/3_Traj/script/opt/: dintopt.pl  input.template
alpha/example/bS/3_Traj/script/samp/: brot.x  dintsamp.pl
alpha/example/test/: m.x  qc.in  qc.xml
alpha/fitlspip/: .fitlspip.x.swp  fitlspip.x  func.f  func.save  param.inc  read.f  svdfit.f
exe/: dint-ch4hALL.x.opt
pydint/: dintdriver.py
pydint/dintparser/: __init__.py  _input.py  _species.py
pydint/dintroutines/: __init__.py  gather.py  geom.py  write.py
pydint/interface/: __init__.py  util.py  writer.py
pydint/interface/templates/: ingen.pl
sprng/EXAMPLES/: .gitignore
sprng/TESTS/: .gitignore  Makefile
src/: CMakeLists.txt  Makefile  dint.F  driver.f  finalstate.f
test/: CH4H_input  run_test.sh
test/expected_output/: Ar_output  fort.80  fort.81  input  inputCH4H  inputCH4O  output  outputCH4H  outputCH4O
(+1987 files in other folders)
